# zero-shot-ice-rma

./: .gitignore  arch.md  baseline.py  callbacks.py  check_env.py  environment.py  evaluation.py  main.py  modal_baseline.py  modal_rma_phase1.py  modal_rma_phase2.py  pyproject.toml  rma.py  rma_phase1.py  rma_phase2.py  show_environment.py  teacher.py  teacher_student.py  test.ipynb  vanilla_rl.py
mujoco_menagerie/unitree_go1/: go1.xml
mujoco_menagerie/unitree_go1_fractal/: fractal_gen.py  go1.xml  scene.xml
work/: environment.txt  show_environment.py
